--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+/* RESET */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* HEADER */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.headerContainer{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  background-color: rgb(0, 132, 255);
+  padding: 10px;
+}
+
+.headerTitle{
+  margin-right: 20rem;
+  font-size: 40px;
+}
+
+.searchBox{
+  width: 45rem;
+  height: 2.5rem;
+  margin-right: 5rem;
+  border-radius: 20px;
+  padding: 15px;
+}
+
+.searchButton{
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  margin-right: 1rem;
+}
+
+.navigation{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
+  gap: 1.5rem;
+  text-decoration: none;
 }
