--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 .searchBox{
   width: 45rem;
   height: 2.5rem;
-  margin-right: 5rem;
+  margin-right: 3rem;
   border-radius: 20px;
   padding: 15px;
 }
@@ -41,4 +41,17 @@
   align-items: center;
   gap: 1.5rem;
   text-decoration: none;
+  margin-right: 4rem;
+}
+
+.notifications{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+}
+
+.requests, .messages, .alerts{
+  width: 30px;
+  height: 30px;
 }
