--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,54 @@
   width: 30px;
   height: 30px;
 }
+
+/* CONTENT */
+
+.Content{
+  display: flex;
+}
+
+/* LINKS */
+
+.linksContainer{
+  height: 100vh;
+  border: 1px solid black;
+}
+
+.linksNavigation{
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+  background-color: white;
+  gap: 3rem;
+  padding: 2rem;
+  width: 20vw;
+  font-size: larger;
+}
+
+.editButton{
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  font-size: large;
+  font-weight: bold;
+  box-shadow: 1px 1px 2px
+}
+
+.linksLine{
+  position: relative;
+  width: 100%;
+  box-shadow: 1px 1px 2px;
+}
+
+.linksLine::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  right: 30px;
+  border-top: 1px solid black;
+  transform: translateY(-50%);
+}
