--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@
   display: flex;
 }
 
-/* LINKS */
+/* SIDE LINKS */
 
 .linksContainer{
   height: 100vh;
@@ -73,7 +73,6 @@
   height: fit-content;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid black; */
   background-color: white;
   gap: 3rem;
   padding: 2rem;
@@ -105,4 +104,39 @@
   right: 30px;
   border-top: 1px solid black;
   transform: translateY(-50%);
+}
+
+.links{
+  text-decoration: none;
+  color: black;
+}
+
+.links:hover{
+  background-color: rgb(0, 132, 255);
+  color: white;
+}
+
+/* MAIN CONTENT */
+
+.profileBackground{
+  background-image: url(/public/img/vecteezy_natural-landscape-of-green-field-with-ai-generated_22697991.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  width: 80vw;
+  height: 30vh;
+}
+
+.profileImage{
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 1px solid black;
+  margin-top: -8rem;
+  background-color: whitesmoke;
+}
+
+.profileImageContainer{
+  display: flex;
+  justify-content: center;
 }
