--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   display: flex;
   width: 100%;
   background-color: rgb(0, 132, 255);
+  border-bottom: 0.5px solid black;
   padding: 10px;
 }
 
@@ -138,5 +139,8 @@
 
 .profileImageContainer{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
