--- a/src/App.css
+++ b/src/App.css
@@ -221,3 +221,12 @@
   font-weight: bolder;
   margin-left: 4rem;
 }
+
+/* ACCOUNTS */
+
+.connectedAccountsContainer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+}
