--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,19 @@
   display: flex;
 }
 
+.middleContentContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.innerContent{
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+
+}
+
 /* SIDE LINKS */
 
 .linksContainer{
@@ -162,6 +175,7 @@
 
 .socialFeed{
   max-width: 45vw;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   gap: 3rem;
@@ -224,9 +238,27 @@
 
 /* ACCOUNTS */
 
-.connectedAccountsContainer{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+.innerAccountsContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   gap: 2rem;
+  max-width: max-content;
+  margin-right: 2rem;
+}
+
+.connectedAccountsContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: fit-content;
+  border: 1px solid black;
+  padding: 2rem;
+  box-shadow: 1px 1px 5px;
+}
+
+.accountsHeader{
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1rem;
 }
