--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,25 @@ button:hover{
   margin-left: 4rem;
 }
 
+.postsFeed{
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: aliceblue;
+  padding: 20px;
+  border: 1px solid black;
+  margin-left: 2rem;
+  margin-top: 1rem;
+  height: 100%;
+}
+
+.newFeed{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border-bottom: 1px solid black;
+}
+
 /* ACCOUNTS */
 
 .innerAccountsContainer{
