--- a/src/App.css
+++ b/src/App.css
@@ -372,3 +372,5 @@ button:hover{
 .connectedAccountsOuterContainer1:hover{
   background-color: rgba(245, 245, 245, 0.852);
 }
+
+/* GIVE IT A 3D BUTTON EFFECT */
