--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ button:hover{
   border: 1px solid black;
   margin-top: -8rem;
   background-color: whitesmoke;
-  background-image: url(/public/img/AE\ profile.avif);
+  background-image: url(/public/img/AEprofile.avif);
   background-position: center;
   background-size: 100% 100%;
 }
@@ -361,7 +361,10 @@ button:hover{
 .accountsHeader{
   width: 100%;
   text-align: center;
+  font-style: italic;
   margin-bottom: 1rem;
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
 }
 
 /* LINKED ACCOUNTS */
