--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+.App{
+  background-color: whitesmoke;
+  height: fit-content;
+}
+
 /* HEADER */
 
 .headerContainer{
@@ -61,6 +66,11 @@
   color: white;
   background-color: transparent;
   border: none;
+}
+
+.requests:hover, .messages:hover, .alerts:hover{
+  cursor: pointer;
+  color: rgb(204, 204, 204)
 }
 
 .filteredResults{
@@ -125,6 +135,7 @@ button:hover{
 .linksContainer{
   height: 100vh;
   border: 1px solid black;
+  background-color: white;
 }
 
 .linksNavigation{
@@ -255,6 +266,7 @@ button:hover{
   padding: 1.5rem;
   margin-left: 2rem;
   margin-top: 2rem;
+  background-color: white;
 }
 
 .newPostContainer{
@@ -316,6 +328,7 @@ button:hover{
   margin-left: 2rem;
   margin-top: 1rem;
   height: 100%;
+  background-color: white;
 }
 
 .newFeed{
@@ -358,6 +371,7 @@ button:hover{
   padding: 2rem;
   box-shadow: 1px 1px 5px;
   margin-top: 1.9rem;
+  background-color: white;
 }
 
 .accountsHeader{
@@ -376,6 +390,7 @@ button:hover{
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  background-color: white;
 }
 
 .linkedAccountsHeader{
